firefox 102 fix text side overflow

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -113,6 +113,7 @@ body > .symbols {
 	display: flex;
 	flex-direction: column;
 	z-index: 1; /* be above photo with blurry backdrop */
+	overflow: hidden;
 }
 .ui .text-side > .scrolling {
 	overflow-y: scroll;
